# symphony

./: .gitignore  SPEC.md  handle_exit_replacement.txt  patch_engine.py  patch_engine.sh  patch_engine_careful.py  patch_engine_careful2.py  patch_engine_careful3.py  patch_engine_careful4.py  patch_engine_careful5.py  patch_engine_clean.py  patch_engine_fix.py  patch_engine_fix2.py  patch_main.py  patch_runner.py  patch_runner_tests.py
example/symphony_vault/.obsidian/: workspace.json
example/symphony_vault/Issues/: TODO-001-初始化 React Todo App 项目.md
rust/: Cargo.toml  README.md  WORKFLOW.md  start.sh
rust/frontend/: index.html  package-lock.json
rust/frontend/src/: App.tsx  index.css
rust/frontend/src/api/: client.ts  types.ts
rust/src/: acp.rs  agent_runner.rs  config.rs  main.rs  models.rs  orchestrator.rs  prompt.rs  server.rs  workflow.rs  workspace.rs
rust/src/tracker/: mod.rs  obsidian.rs
rust_flutter/: README.md  WORKFLOW.md
rust_flutter/backend/: Cargo.toml
rust_flutter/backend/src/: main.rs
rust_flutter/backend/src/api/: mod.rs  routes.rs  server.rs  state.rs
rust_flutter/backend/src/config/: loader.rs
rust_flutter/backend/src/domain/: models.rs
rust_flutter/backend/src/execution/: hooks.rs  mod.rs  runner.rs  workspace.rs
rust_flutter/backend/src/orchestrator/: engine.rs
rust_flutter/backend/src/prompt/: renderer.rs
rust_flutter/backend/src/tracker/: mod.rs  obsidian.rs  updater.rs
rust_flutter/frontend/: pubspec.yaml
rust_flutter/frontend/lib/: main.dart
rust_flutter/frontend/lib/api/: api_client.dart
rust_flutter/frontend/lib/bloc/: symphony_bloc.dart  symphony_event.dart  symphony_state_bloc.dart
rust_flutter/frontend/lib/models/: symphony_state.dart
rust_flutter/frontend/lib/ui/: dashboard.dart
rust_flutter/frontend/lib/ui/widgets/: retry_queue_list.dart  running_sessions_list.dart  summary_card.dart
rust_flutter/frontend/test/: widget_test.dart
test-todo/symphony_vault/: TODO-001-初始化 React Todo App 项目.md
test-todo/symphony_vault/.obsidian/: workspace.json
