[package]
name = "symphony"
version = "0.1.0"
edition = "2021"
description = "Symphony automation service - Rust implementation"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Template rendering
liquid = "0.26"
liquid-core = "0.26"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
regex = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
thiserror = "2"
async-trait = "0.1"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
